🐛 fix tooltip rendered behind settings popup

--- a/packages/@ourworldindata/components/src/LabeledSwitch/LabeledSwitch.scss
+++ b/packages/@ourworldindata/components/src/LabeledSwitch/LabeledSwitch.scss
@@ -106,4 +106,23 @@ $lato: $sans-serif-font-stack;
             }
         }
     }
+
+    // Info icon that triggers tooltip
+    label .tooltip-trigger {
+        display: inline;
+        background: none;
+        border: none;
+        padding: 0;
+        margin: 0;
+        cursor: default;
+        color: inherit;
+        vertical-align: middle;
+
+        svg {
+            color: $gray-60;
+            height: 13px;
+            padding: 0 0.333em;
+            vertical-align: baseline;
+        }
+    }
 }
